--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-  html { 
-    background: url(/image/back.jpg) no-repeat center center fixed; 
+html { 
+    background: url(back.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
